syntax = "proto3";

package betting;

service BettingService {
  rpc PlaceBet (PlaceBetRequest) returns (PlaceBetResponse) {}

}


message PlaceBetRequest {
  repeated BetSlip betslip = 1;
  int32 clientId = 2;
  int32 userId = 3;
  float stake = 4;
  string source = 5;
  string ipAddress = 6;
}

message BetSlip {
  string eventName = 1;
  string eventType = 2;
  int64 eventId = 3;
  int32 producerId = 4;
  int32 marketId = 5;
  string marketName = 6;
  string specifier = 7;
  string outcomeId = 8;
  string outcomeName = 9;
  float odds = 10;
  int64 sportId = 11;

}

message PlaceBetResponse {
  int32 betId = 1;
  int32 status = 2;
  string statusDescription = 3;
}